# fragments

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  domain.toml  handoff.md  package.json  workspace.yaml
.github/workflows/: ci.yml  release.yml
audits/: 2026-05-06-surface-and-fork.md  2026-06-02-consumer-friction.md  2026-06-02-first-principles-core.md  2026-06-02-format-agnostic-dogfood.md  2026-06-02-production-readiness-bar.md
docs/: core-vs-opinion.md  relay-to-pagekit-2026-06-02.md  weave-adoption-assessment.md
specs/: fragments.md  html-compiler.md
src/: config.rs  doctor.rs  extract.rs  file_io.rs  init.rs  lib.rs  list.rs  main.rs  sync.rs  syntax.rs  watch.rs
tasks/: arc.md
tests/: format_agnostic.rs  hooks.rs  integration.rs  json_output.rs
