[package]
name = "fragments"
version = "0.5.0"
edition = "2021"
description = "Sync shared text fragments across files — one primitive, unlimited coverage"

[[bin]]
name = "fragments"
path = "src/main.rs"

[dependencies]
notify = "7"
notify-debouncer-mini = "0.5"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
scraper = "0.22"

[dev-dependencies]
tempfile = "3"
