[package]
name = "fragments-sync"
version = "0.7.0"
edition = "2021"
description = "Sync shared text fragments across files — one primitive, any text format"
authors = ["Felix Hellström"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fellanH/fragments"
homepage = "https://github.com/fellanH/fragments"
readme = "README.md"
keywords = ["fragments", "include", "templating", "static-site", "sync"]
categories = ["command-line-utilities", "development-tools", "web-programming"]
exclude = ["audits/", "specs/", "tasks/", "AGENTS.md", "workspace.yaml", ".github/"]

[lib]
name = "fragments"
path = "src/lib.rs"

[[bin]]
name = "fragments"
path = "src/main.rs"

[dependencies]
notify = "7"
notify-debouncer-mini = "0.5"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
